--- a/static/css/app.css
+++ b/static/css/app.css
@@ -1,41 +1,50 @@
 body {
-    background-color: rgba(1, 69, 150, 0.73);
-    color: white;
+    background-color: rgba(189, 213, 234, 0.8);
+    color: black;
+    font-size: 1.5em;
+}
+
+.navbar {
+    border-bottom: solid 2px white;
 }
 
 p.navbar-brand {
-    font-size: 2.5em;
-    font-weight: 900;
-    text-transform: lowercase;
+    font-size: 2em;
+    font-weight: 700;
 }
 
 a.navbar-brand img {
     margin-right: 20px;
 }
 
-#login-container {
-    margin-top: 50px;
-    width: 40%;
+.subtitle {
+    font-size: 0.5em;
+    font-weight: 300;
+    margin-left: 10px;
 }
 
-form label {
-    font-weight: 500;
+
+
+h1 {
+    color: 577399;
+    font-size: 3em;
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+h2 {
+    margin-top: 80px;
+    color: #D04E46;
     font-size: 2em;
 }
 
-form input {
-    height: 3em;
-    margin-bottom: 40px;
+li {
+    margin-bottom: 10px;
 }
 
-button {
-    cursor: pointer;
+
+hr {
+    border: solid black 4px;
+    width: 100%;
 }
 
-.card {
-    color: #1f1f1f;
-}
-
-.card-block {
-    overflow-wrap: break-word;
-}
