--- a/templates/home.html
+++ b/templates/home.html
@@ -13,7 +13,7 @@
         <h6 class="card-subtitle mb-2 text-muted">(Because we know you're lonely here)</h6>
         <br>
         <br>
-        <form action="/search" method="POST">
+        <form action="/sqli/demo/search" method="POST">
             <div class="form-group">
                 <input type="text" class="form-control" name="search" id="search" placeholder="Search by username!"> {% if searchResults is defined %}
                 {% if not searchResults %}
