--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,6 @@
 {% extends "template.html" %} {% block content %}
 <div class="container" id="login-container">
-<form action="/" method="POST">
+<form action="/sqli/demo" method="POST">
     <div class="form-group">
         <label for="username">Username</label>
         <input type="text" class="form-control" name="username" id="username" placeholder="Username">
