--- a/templates/template.html
+++ b/templates/template.html
@@ -1,36 +1,40 @@
 <!DOCTYPE html>
 <html>
 
-<head>
+  <head>
     {% block head %} {% block title %}
     <title>Bookface: Move Things and Breakfast</title>
     {% endblock title %}
 
-    <link rel="stylesheet" type="text/css" href="/static/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="/static/css/app.css"> {% endblock head %} {% block body %}
-    <nav class="navbar navbar-light bg-faded">
-        <p class="navbar-brand">
-            <img src="/static/images/fb-logo.png" width="60" height="60" class="d-inline-block align-top" alt=""> Bookface
+    <link rel="stylesheet" type="text/css" href="/sqli-static/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="/sqli-static/css/app-demo.css"> {% endblock head %}
+  </head>
 
-            <a href="/logout" class="text-muted mt-3" style="font-size: 0.5em; font-weight: 300; float: right;">
-        Logout
+  {% block body %}
+  <body>
+    <nav class="navbar navbar-light bg-faded">
+      <p class="navbar-brand">
+        <img src="/sqli-static/images/fb-logo.png" width="60" height="60" class="d-inline-block align-top" alt=""> Bookface
+
+        <a href="/sqli/demo/logout" class="text-muted mt-3" style="font-size: 0.5em; font-weight: 300; float: right;">
+          Logout
         </a>
-        </p>
+      </p>
     </nav>
 
     {% if error is defined %}
     <center>
-        <div style="color:red; margin-top:40px; background-color:white; padding:10px; display:inline-block; border: 2px solid black; border-radius: 15px;">
-            ERROR: {{ error }}
-        </div>
+      <div style="color:red; margin-top:40px; background-color:white; padding:10px; display:inline-block; border: 2px solid black; border-radius: 15px;">
+        ERROR: {{ error }}
+      </div>
     </center>
     {% endif %} {% block content %} Default Content {% endblock content %}
 
 
-    <script type="text/javascript" src="/static/js/jquery-3.1.1.min.js"></script>
-    <script type="text/javascript" src="/static/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="/sqli-static/js/jquery-3.1.1.min.js"></script>
+    <script type="text/javascript" src="/sqli-static/js/bootstrap.min.js"></script>
 
     {% endblock body %}
-</head>
+  </body>
 
 </html>
