--- a/templates/index.html
+++ b/templates/index.html
@@ -179,15 +179,18 @@
 	<li>Enter this as your search query: <b>' UNION SELECT username, password, 1, 1, 1 FROM user;-- </b></li>
 	<li>Enjoy your passwords! You can now do whatever you want with them: sell them? hold them for ransom? submit them for bug bounty? It's up to you!</li>
       </ul>
-    </li>
-    
+    </li>    
   </ul>
 </p>
 
-
-
 </div>
 <br><br><br>
+
+<footer class="footer">
+  <div class="container">
+    <span class="text-muted">Copyright &copy; <b>Team ' OR 1=1; DROP TABLE user;-- </b> | William Xiang | Jack Schluger | Rodda John</span>
+  </div>
+</footer>
 
 <script type="text/javascript" src="/sqli-static/js/jquery-3.1.1.min.js"></script>
 <script type="text/javascript" src="/sqli-static/js/bootstrap.min.js"></script>
