--- a/static/css/app.css
+++ b/static/css/app.css
@@ -42,9 +42,17 @@ li {
     margin-bottom: 10px;
 }
 
-
 hr {
     border: solid black 4px;
     width: 100%;
 }
 
+.footer {
+    position: relative;
+    bottom: 0;
+    width: 100%;
+    /* Set the fixed height of the footer here */
+    height: 60px;
+    line-height: 60px; /* Vertically center the text there */
+    background-color: #f5f5f5;
+}
