fixed demo link

--- a/templates/index.html
+++ b/templates/index.html
@@ -73,7 +73,7 @@
   <hr>
   <h1 class="display-1">Now let's hack!</h1>
   <h1 class="lead">
-    We’ve created our very own <a href="" target="_blank" style="font-size: 1.2em;" class="mx-1"> hackable website demo</a> for you to test out some SQL attacks!
+    We’ve created our very own <a href="/sqli/demo" target="_blank" style="font-size: 1.2em;" class="mx-1"> hackable website demo</a> for you to test out some SQL attacks!
 </h4>
 <hr>
 
