--- a/static/css/app.css
+++ b/static/css/app.css
@@ -56,3 +56,9 @@ hr {
     line-height: 60px; /* Vertically center the text there */
     background-color: #f5f5f5;
 }
+
+.code {
+    font-family: 'Inconsolata', monospace;
+    background-color: rgba(0, 0, 0, 0.2);
+    padding: 5px;
+}
